fix #192 word wrap on schedule page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -635,7 +635,7 @@ p.speaker-inst {
 .sched-well p {
   line-height: 1.7em;
   font-size: .9em;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 /* ==========================================================================
